<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ParkingVehicleFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollViewCreate">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTitleVehicle"
                android:text="Información del vehiculo"
                android:textSize="30dp"
                android:fontFamily="cursive"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/editTextPlate"
                    android:textAlignment="center"
                    android:hint="Placa"
                    android:maxLength="6"
                    android:inputType="textCapCharacters"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/editTextCylinder"
                    android:textAlignment="center"
                    android:hint="Cilindraje"
                    android:maxLength="6"
                    android:inputType="number"
                    android:visibility="gone"/>
            </LinearLayout>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroupTypeVehicle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/radioButtonCar"
                    android:text="Carro"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButtonMotorcycle"
                    android:text="Moto"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEntryDate"
                android:text="Fecha de entrada"
                android:textSize="20dp"
                android:fontFamily="sans-serif"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"/>
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/calendarEntryDate"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp">

                <Button
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/buttonCreateVehicle"
                    android:text="Guardar"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>