...
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAddVehicle"
                android:layout_marginTop="80dp"
                android:text="Añadir vehiculo"
                android:layout_gravity="center_horizontal"
                />
            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonViewVehicle"
                android:layout_marginTop="40dp"
                android:text="Ver vehiculos"
                android:layout_gravity="center_horizontal"
                />
            <ProgressBar
                android:layout_width="wrap_content"
...
