<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.VehiclesListFragment"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vehiculos"
        android:fontFamily="cursive"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:id="@+id/tvTitlesList"
        android:layout_marginTop="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerViewVehicles">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>