...
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonPay"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="Pagar"
                    android:layout_gravity="right">
                </Button>
            </LinearLayout>
...
